# GoIt_Web_HW5

./: README.md  pbinf2.py  pbinf_client.py  pbinf_server.py  pyproject.toml
