[tool.poetry]
name = "pbinf-py"
version = "0.1.0"
description = "Exchange rates PB"
authors = ["BGU"]
license = "MIT"
readme = "README.md"
packages = [{include = "pbinf"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
